--- a/Social_Media_and_Happiness.ipynb
+++ b/Social_Media_and_Happiness.ipynb
@@ -3832,6 +3832,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### TODO:\n",
+    "- https://seaborn.pydata.org/generated/seaborn.pairplot.html"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
