--- a/Social_Media_and_Happiness.ipynb
+++ b/Social_Media_and_Happiness.ipynb
@@ -3299,7 +3299,9 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3331,6 +3333,23 @@
     "    plt.show()\n",
     "    \n",
     "contour_plot(x, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Takeaways\n",
+    "1. What do the contours mean?\n",
+    "\n",
+    "    - Contour lines show where the density of points are the same! \n",
+    "    - It's almost like a 3D plot, because the colour hues give another 'dimension' to the graph.\n",
+    "2. What is KDE?\n",
+    "    - KDE represents Kernal Density Estimation!\n",
+    "3. What is cmap?\n",
+    "    - colour map argument to colour the map Red, Blue, Mako, \n",
+    "4. Why do contours look different on two different computers, though running the same code, data and using the same jupyter notebook?\n",
+    "    - different versions of seaborn use different default bw values!\n"
    ]
   },
   {
@@ -3376,7 +3395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note the max is 5000 and the median is 215! 5000 is missing in the cont"
+    "Note the max is 5000 and the median is 215! 5000 is missing in the contour graph below."
    ]
   },
   {
@@ -3416,16 +3435,33 @@
    "metadata": {},
    "source": [
     "### Takeaways\n",
-    "1. What do the contours mean?\n",
     "\n",
-    "    - Contour lines show where the density of points are the same! \n",
-    "    - It's almost like a 3D plot, because the colour hues give another 'dimension' to the graph.\n",
-    "2. What is KDE?\n",
-    "    - KDE represents Kernal Density Estimation!\n",
-    "3. What is cmap?\n",
-    "    - colour map argument to colour the map Red, Blue, Mako, \n",
-    "4. Why do contours look different on two different computers, though running the same code, data and using the same jupyter notebook?\n",
-    "    - different versions of seaborn use different default bw values!\n"
+    "Reflections:\n",
+    "- Have really enjoyed playing around with different plots besides the usual scatter plot\n",
+    "- The 2D histogram for example, provides a different perspective on the same data by showing us the most prominent combination of variables\n",
+    "- The contour plot, however, is the one I am most fascinated by as prior to this I had only ever seen such plots in Geography!\n",
+    "- Was initially puzzled as to why there would be a need for the contour lines, but after understanding that they actually represent points which have the same number of occurrences, the plot feels much more intuitive "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1. From the contour plot, having more friends on social media doesn't always equate to having more happiness which does makes sense, from our own knowledge. Friends on social media do not carry the same meaning as personal friends in our lives. \n",
+    "\n",
+    "2. Having more friends on social media might increase with happiness, as shown by the fact that the people who are happiest have ~100 friends on social media. But there must be a point of diminishing returns and possibly even negative where having too many friends might cause someone to be overly-stressed. Clearly, having more than a thousand friends on social media might still result in a happiness index of around 7.\n",
+    "\n",
+    "3. While the contour plot conveys quite a bit of information, I feel that it could be easy to misintepret as the lines do not represent the frequency as per what we are typically used to. Nonetheless, I think experimenting with such plots has been a good exposure for me and I do feel more comfortable (at least a little) when dealing with different types of plots."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Some questions**\n",
+    "- Why is the maximum value (i.e 5000 friends missing on the contour plot?) Perhaps a side effect of this plot?\n",
+    "- Since having 5000 friends on social media seems very unrealistic, would it be alright to remove such data points?\n",
+    "- If so, then we could zoom in on our plot to the majority who have to up to a couple of thousand of friends on social media, and thus gain a clearer picture of the distribution of friends and happiness?"
    ]
   },
   {
@@ -3434,34 +3470,6 @@
    "source": [
     "### TODO:\n",
     "- https://seaborn.pydata.org/generated/seaborn.pairplot.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count     211.000000\n",
-       "mean      354.872038\n",
-       "std       507.491175\n",
-       "min         0.000000\n",
-       "25%        42.500000\n",
-       "50%       215.000000\n",
-       "75%       500.000000\n",
-       "max      5000.000000\n",
-       "Name: num_of_friends_social_media, dtype: float64"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sub_df['num_of_friends_social_media'].describe()"
    ]
   },
   {
