--- a/Social_Media_and_Happiness.ipynb
+++ b/Social_Media_and_Happiness.ipynb
@@ -3436,29 +3436,20 @@
    "source": [
     "### Takeaways\n",
     "\n",
-    "Reflections:\n",
-    "- Have really enjoyed playing around with different plots besides the usual scatter plot\n",
-    "- The 2D histogram for example, provides a different perspective on the same data by showing us the most prominent combination of variables\n",
-    "- The contour plot, however, is the one I am most fascinated by as prior to this I had only ever seen such plots in Geography!\n",
-    "- Was initially puzzled as to why there would be a need for the contour lines, but after understanding that they actually represent points which have the same number of occurrences, the plot feels much more intuitive "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "**Analysis:**\n",
     "1. From the contour plot, having more friends on social media doesn't always equate to having more happiness which does makes sense, from our own knowledge. Friends on social media do not carry the same meaning as personal friends in our lives. \n",
     "\n",
     "2. Having more friends on social media might increase with happiness, as shown by the fact that the people who are happiest have ~100 friends on social media. But there must be a point of diminishing returns and possibly even negative where having too many friends might cause someone to be overly-stressed. Clearly, having more than a thousand friends on social media might still result in a happiness index of around 7.\n",
     "\n",
-    "3. While the contour plot conveys quite a bit of information, I feel that it could be easy to misintepret as the lines do not represent the frequency as per what we are typically used to. Nonetheless, I think experimenting with such plots has been a good exposure for me and I do feel more comfortable (at least a little) when dealing with different types of plots."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Some questions**\n",
+    "3. While the contour plot conveys quite a bit of information, I feel that it could be easy to misintepret as the lines do not represent the frequency as per what we are typically used to. Nonetheless, I think experimenting with such plots has been a good exposure for me and I do feel more comfortable (at least a little) when dealing with different types of plots.\n",
+    "\n",
+    "**Reflections:**\n",
+    "- Have really enjoyed playing around with different plots besides the usual scatter plot\n",
+    "- The 2D histogram for example, provides a different perspective on the same data by showing us the most prominent combination of variables\n",
+    "- The contour plot, however, is the one I am most fascinated by as prior to this I had only ever seen such plots in Geography!\n",
+    "- Was initially puzzled as to why there would be a need for the contour lines, but after understanding that they actually represent points which have the same number of occurrences, the plot feels much more intuitive \n",
+    "\n",
+    "**Questions**\n",
     "- Why is the maximum value (i.e 5000 friends missing on the contour plot?) Perhaps a side effect of this plot?\n",
     "- Since having 5000 friends on social media seems very unrealistic, would it be alright to remove such data points?\n",
     "- If so, then we could zoom in on our plot to the majority who have to up to a couple of thousand of friends on social media, and thus gain a clearer picture of the distribution of friends and happiness?"
